--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>University Library</title>
     <link rel="stylesheet" href="index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Lexend+Exa:wght@600&family=Urbanist:wght@600&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
     <br><br>
     Higher education category
     <br>
-    <input type="text" placeholder="University/College" id="place">
+    <input type="text" placeholder="University/College" id="category">
     <br><br>
     <button class="button" onClick="buttonClicked()">Search</button>
   </div>
